{
  "version": 4,
  "terraform_version": "0.14.8",
  "serial": 6,
  "lineage": "7d088043-8830-73b6-050a-fccd6c79f429",
  "resources": [
    {
      "module": "module.webservers",
      "mode": "managed",
      "type": "aws_elb",
      "name": "sample",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:elasticloadbalancing:us-east-1:337316825206:loadbalancer/terraform-asg-sample",
            "availability_zones": [
              "us-east-1a",
              "us-east-1b",
              "us-east-1c",
              "us-east-1d",
              "us-east-1e",
              "us-east-1f"
            ],
            "connection_draining": false,
            "connection_draining_timeout": 300,
            "cross_zone_load_balancing": true,
            "dns_name": "terraform-asg-sample-1951755091.us-east-1.elb.amazonaws.com",
            "health_check": [
              {
                "healthy_threshold": 2,
                "interval": 30,
                "target": "HTTP:8080/",
                "timeout": 3,
                "unhealthy_threshold": 2
              }
            ],
            "id": "terraform-asg-sample",
            "idle_timeout": 60,
            "internal": false,
            "listener": [
              {
                "instance_port": 8080,
                "instance_protocol": "http",
                "lb_port": 80,
                "lb_protocol": "http"
              }
            ],
            "name": "terraform-asg-sample",
            "security_groups": [
              "sg-0163ec5abb86e4f9c"
            ],
            "source_security_group": "337316825206/terraform-sample-elb-sg",
            "source_security_group_id": "sg-0163ec5abb86e4f9c",
            "subnets": [
              "subnet-00f98b67",
              "subnet-1e92a611",
              "subnet-20aba96a",
              "subnet-47d4ad69",
              "subnet-90d958ae",
              "subnet-c4d6a998"
            ],
            "zone_id": "Z35SXDOTRQ7X7K"
          },
          "dependencies": [
            "module.webservers.aws_security_group.elb-sg",
            "module.webservers.data.aws_availability_zones.all"
          ]
        }
      ]
    },
    {
      "module": "module.webservers",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "busybox",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:337316825206:security-group/sg-06f7e67a316107625",
            "description": "Managed by Terraform",
            "egress": [],
            "id": "sg-06f7e67a316107625",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 8080,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 8080
              }
            ],
            "name": "terraform-busybox-sg",
            "name_prefix": "",
            "owner_id": "337316825206",
            "revoke_rules_on_delete": false,
            "tags": null,
            "timeouts": null,
            "vpc_id": "vpc-efb03e95"
          },
          "sensitive_attributes": [],
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.webservers",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "elb-sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:337316825206:security-group/sg-0163ec5abb86e4f9c",
            "description": "Managed by Terraform",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0163ec5abb86e4f9c",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              }
            ],
            "name": "terraform-sample-elb-sg",
            "name_prefix": "",
            "owner_id": "337316825206",
            "revoke_rules_on_delete": false,
            "tags": null,
            "timeouts": null,
            "vpc_id": "vpc-efb03e95"
          },
          "sensitive_attributes": []
        }
      ]
    }
  ]
}